[metadata]
name = tidydev
description = Clean up your development directory.
long_description = file: README.md
long_description_content_type = text/markdown
license = Public Domain
version = 1.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires=
    GitPython
    tabulate
